<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_fragment_other_user_profile_info"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circular_view_fragment_other_user_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="@dimen/image_view_margin_top"
            android:src="@drawable/ic_person_black_24dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView

            android:id="@+id/text_fragment_other_user_profile_fullname"
            style="@style/InfoBoxTextStyle"
            android:text="@string/fullname" />

        <TextView
            android:id="@+id/text_fragment_other_user_profile_nickname"
            style="@style/InfoBoxTextStyle"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/text_fragment_other_user_profile_more_info"
            style="@style/InfoBoxTextStyle"
            android:text="@string/more_info"
            />

        <TextView
            android:id="@+id/text_fragment_other_user_profile_info_box"
            style="@style/InfoBoxTextStyle"
            android:text="@string/more_info"
            android:visibility="gone"/>


        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_fragment_profile_other_user_posts"
            app:layout_constraintTop_toBottomOf="@id/layout_fragment_other_user_profile_info"
            app:layout_constraintBottom_toBottomOf="parent">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>