<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relative_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_profile_image_post"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person_black_24dp"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/image_profile_image_post"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_post_item_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/test_string_long"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_post_item_published_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/test_string_short"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image_post_item_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_more_vert_black_24dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_post_item_post_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="10dp"
        android:text="@string/test_sentence"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_layout_1" />

    <FrameLayout
        android:id="@+id/frame_layout_post_item_image_video_music_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_post_item_post_text">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/inner_recycler_view_post_item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone">

        </android.support.v7.widget.RecyclerView>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_layout_post_item_image_video_music_container">

        <ImageView
            android:id="@+id/image_comment_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_comment_black_24dp" />

        <TextView
            android:id="@+id/text_post_item_comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/image_comment_icon"
            android:text="@string/zero" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>